5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1836_1278.log
== TEST (2019-07-01 15:39:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
x=int(input(":"))
while(y!=-1):
	y=int(input(""))

	for i range(7):
		if(x==vet[i]):
			a=i
		if(y==vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	x=y
print(soma)
-- ERROR:
File "XXXX", line 21
    for i range(7):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:39:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
x=int(input(":"))
while(y!=-1):
	y=int(input(""))
	
	for i in range(7):
		if(x==vet[i]):
			a=i
		if(y==vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	x=y
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:39:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

x=int(input(":"))
y=int(input(":"))
mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
x=int(input(":"))
while(y!=-1):
	y=int(input(""))
	
	for i in range(7):
		if(x==vet[i]):
			a=i
		if(y==vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	x=y
print(soma)
-- EXECUTION TIME:
0.951066
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
11
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
22
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 15:40:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
x=int(input(":"))
while(y!=-1):
	y=int(input(""))
	
	for i in range(7):
		if(x==vet[i]):
			a=i
		if(y==vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	x=y
print(soma)
-- EXECUTION TIME:
1.00347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1278/main.py", line 16, in <module>
    while(y!=-1):
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 15:40:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
x=int(input(":"))
while(y!=-1):
	y=int(input(""))
	
	for i in range(7):
		if(x==vet[i]):
			a=i
		if(y==vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	x=y
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:29:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
x=int(input(":"))
while(y!=-1):
	y=int(input(""))
	
	for i in range(7):
		if(x==vet[i]):
			a=i
		if(y==vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	x=y
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:30:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

mat=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

soma=0
a=0
b=0
aux=111
vet=zeros(7,dtype=int)
for i in range(7):
	vet[i]=aux
	aux+=111
	
x=int(input(":"))
y=1
while(y!=-1):
	y=int(input(""))
	
	for i in range(7):
		if(x==vet[i]):
			a=i
		if(y==vet[i]):
			b=i
	soma+=mat[a,b]
	a=b
	x=y
print(soma)
-- EXECUTION TIME:
0.851756
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
